--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <title>2practice-ProgrammingHero1B 11-7-22</title>
 </head>
+
 <body>
-    <p><b>Lorem bold tag,</b> <strong>Ipsum strong tag</strong>  dolor sit amet consectetur adipisicing elit. Laborum, veritatis.</p>
+    <p><b>Lorem bold tag,</b> <strong>Ipsum strong tag</strong> dolor sit amet consectetur adipisicing elit. Laborum,
+        veritatis.</p>
     <h1>h1</h1>
     <h2>h2</h2>
     <h3>h3</h3>
@@ -16,6 +19,36 @@
     <h5>h5</h5>
     <h6>h6</h6>
     <img src="images/W3Schools_logo.png" alt="W3Schools_logo" id="img_w3logo">
-    
+    <h1>Ordered, unorderd List is a container tag.</h1>
+    <ol>
+        <li>Hello</li>
+        <li>Hi</li>
+    </ol>
+    <ol type="A">
+        <li>Hello</li>
+        <li>Hi</li>
+    </ol>
+    <ul>
+        <li>Hello</li>
+        <li>Hi</li>
+    </ul>
+    <ul style="list-style-type: square;">
+        <li>Pencil</li>
+        <li>Pen</li>
+    </ul>
+    <button>Click here</button>
+    <input type="text">
+    <span>span tag</span>
+    <h1><a href="https://www.w3schools.com/html/default.asp" target="_blank">w3schools all html tag practice online</a>
+    </h1>
+    <div>
+        <h4>division tag: container/pocket <em>(division semantic tag na)</em></h4>
+    </div>
+    <section>
+        <h4>section tag: container/pocket <em>(is section tag SEO friendly)</em></h4>
+        <p>যে ট্যাগটাকে দেখলেই বোঝা যাবে, এটার Purpose কি। তাকে Semantic ট্যাগ বলে। যেমন: strong, section, article </p>
+    </section>
+
 </body>
+
 </html>
