--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1 id="abbrviation_tag"> <abbr title="HyperText Markup Language">HTML</abbr></h1>
     <p><b>Lorem bold tag,</b> <strong>Ipsum strong tag</strong> dolor sit amet consectetur adipisicing elit. Laborum,
         veritatis.</p>
     <h1>h1</h1>
@@ -48,6 +49,16 @@
         <h4>section tag: container/pocket <em>(is section tag SEO friendly)</em></h4>
         <p>যে ট্যাগটাকে দেখলেই বোঝা যাবে, এটার Purpose কি। তাকে Semantic ট্যাগ বলে। যেমন: strong, section, article </p>
     </section>
+    <hr>
+    <h1 id="abbrviation_tag"> <abbr title="Cascading Style Sheets">CSS</abbr></h1>
+    <h1>Background-color, height, width, font, css measuring unitis</h1>
+    <p id="background_colorpractice">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, quos. CSS  এর measuring হলো pixel. বেশি use করবো pixel, percentage, em মাঝে মাঝে। সাধারণত text bold করতে 700; নরমাল করতে 400;</p>
+    <h1><a href="https://www.w3schools.com/css/default.asp" target="_blank">w3schools all css Property practice online</a>
+    <p>Lorem ipsum <span>dollar</span> sit amet consectetur adipisicing elit. Ut, voluptatem.</p>
+    <h1>Border, border-radius, margin, different ways to set margin</h1>
+    
+
+
 
 </body>
 
