--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <link rel="stylesheet" href="style.css">
     <title>2practice-ProgrammingHero1B 11-7-22</title>
 </head>
@@ -53,11 +53,46 @@
     <hr>
     <h1 id="abbrviation_tag"> <abbr title="Cascading Style Sheets">CSS</abbr></h1>
     <h1>Background-color, height, width, font, css measuring unitis</h1>
-    <p id="background_colorpractice">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, quos. CSS  এর measuring হলো pixel. বেশি use করবো pixel, percentage, em মাঝে মাঝে। সাধারণত text bold করতে 700; নরমাল করতে 400;</p>
-    <h1><a href="https://www.w3schools.com/css/default.asp" target="_blank">w3schools all css Property practice online</a>
-    <p>Lorem ipsum <span>dollar</span> sit amet consectetur adipisicing elit. Ut, voluptatem.</p>
-    <h1>Border, border-radius, margin, different ways to set margin</h1>
-    
+    <p id="background_colorpractice">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, quos. CSS এর
+        measuring হলো pixel. বেশি use করবো pixel, percentage, em মাঝে মাঝে। সাধারণত text bold করতে 700; নরমাল করতে 400;
+    </p>
+    <h1><a href="https://www.w3schools.com/css/default.asp" target="_blank">w3schools all css Property practice
+            online</a>
+        <p>Lorem ipsum <span>dollar</span> sit amet consectetur adipisicing elit. Ut, voluptatem.</p>
+        <h1>7. Border, border-radius, margin, different ways to set margin</h1>
+        <h1 id="border_style">Border, border-radius CSS.</h1>
+        <h1 id="one_way">margin, different ways to set margin (1 Way). {Charidike Bahire Shoman Margin}.</h1>
+        <h1 id="two_way">margin, different ways to set margin (2 Way). {first value top, bottom}, {second value left,
+            right}.</h1>
+        <h1 id="three_way">margin, different ways to set margin (3 Way). {spesic value 4 side. top, right, bottom,
+            left}.</h1>
+        <h1>8. Padding, <a href="https://www.w3schools.com/css/css_boxmodel.asp" target="_blank">What is css box
+                model?</a>
+        </h1>
+        <h2>Demonstrating the Box Model</h2>
+        <p>The CSS box model is essentially a box that wraps around every HTML element. It consists of: borders,
+            padding, margins, and the actual content.
+        </p>
+        <div id="css_boxmodel">This text is the content of the box. We have added a 50px padding, 20px margin and a 15px
+            green border. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.
+        </div>
+        <div id="css_boxmodel">
+            <p>
+                CSS Box মডেল টা কি? একটা ওয়েবসাইটের মধ্যে, কোনো একটা Element কতটুকু জায়গা নিবে, এটা define করে ৫ টা জিনিস দিয়ে। যেমন হচ্ছে: 1. height, 2. widht, 3 margin, 4. padding, 5. border
+                এই ৫ টা দিলেই বুঝা যাবে ওয়েবসাইটে কতটুকু জায়গা নেবে তুমি।
+            </p>
+        </div>
+        <h1>9. text align, float, display, inline block, inline-block, external css</h1>
+        <div id="text_align_float_display_inline_block">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto impedit nisi explicabo omnis eius in, placeat quidem adipisci ducimus, error delectus. Dolore corporis quod harum nostrum libero quam ducimus placeat, qui, saepe unde consequatur molestiae omnis. Harum officiis commodi numquam, incidunt fugit nisi culpa! Esse eligendi quae deleniti excepturi enim alias aspernatur vel praesentium magnam vero animi voluptatum obcaecati suscipit iusto officiis vitae incidunt, necessitatibus dolorem, eius inventore minus ipsum et. Incidunt impedit eius, porro, modi numquam odit, harum labore quam voluptatem repellendus recusandae. Voluptatem quis inventore culpa voluptatum nobis voluptatibus tenetur eum aperiam modi, accusantium pariatur saepe ratione magnam.</p>
+        </div>
+
+
+
 
 
 
