--- a/index.html
+++ b/index.html
@@ -90,12 +90,10 @@
         <div id="text_align_float_display_inline_block">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto impedit nisi explicabo omnis eius in, placeat quidem adipisci ducimus, error delectus. Dolore corporis quod harum nostrum libero quam ducimus placeat, qui, saepe unde consequatur molestiae omnis. Harum officiis commodi numquam, incidunt fugit nisi culpa! Esse eligendi quae deleniti excepturi enim alias aspernatur vel praesentium magnam vero animi voluptatum obcaecati suscipit iusto officiis vitae incidunt, necessitatibus dolorem, eius inventore minus ipsum et. Incidunt impedit eius, porro, modi numquam odit, harum labore quam voluptatem repellendus recusandae. Voluptatem quis inventore culpa voluptatum nobis voluptatibus tenetur eum aperiam modi, accusantium pariatur saepe ratione magnam.</p>
         </div>
-
-
-
-
-
-
+        <a href="https://www.w3schools.com/css/css_dimension.asp" target="_blank">CSS Height, Width and Max-width</a>
+        <a href="https://www.w3schools.com/css/css_selectors.asp" target="_blank">CSS Selectors</a>
+        <a href="https://www.w3schools.com/cssref/pr_margin-left.asp" target="_blank">CSS margin-left Property</a>
+        <a href="https://www.w3schools.com/html/html_blocks.asp" target="_blank">HTML Block and Inline Elements</a>
 </body>
 
 </html>
