--- a/index.html
+++ b/index.html
@@ -82,18 +82,63 @@
         </div>
         <div id="css_boxmodel">
             <p>
-                CSS Box মডেল টা কি? একটা ওয়েবসাইটের মধ্যে, কোনো একটা Element কতটুকু জায়গা নিবে, এটা define করে ৫ টা জিনিস দিয়ে। যেমন হচ্ছে: 1. height, 2. widht, 3 margin, 4. padding, 5. border
+                CSS Box মডেল টা কি? একটা ওয়েবসাইটের মধ্যে, কোনো একটা Element কতটুকু জায়গা নিবে, এটা define করে ৫ টা
+                জিনিস দিয়ে। যেমন হচ্ছে: 1. height, 2. widht, 3 margin, 4. padding, 5. border
                 এই ৫ টা দিলেই বুঝা যাবে ওয়েবসাইটে কতটুকু জায়গা নেবে তুমি।
             </p>
         </div>
         <h1>9. text align, float, display, inline block, inline-block, external css</h1>
         <div id="text_align_float_display_inline_block">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto impedit nisi explicabo omnis eius in, placeat quidem adipisci ducimus, error delectus. Dolore corporis quod harum nostrum libero quam ducimus placeat, qui, saepe unde consequatur molestiae omnis. Harum officiis commodi numquam, incidunt fugit nisi culpa! Esse eligendi quae deleniti excepturi enim alias aspernatur vel praesentium magnam vero animi voluptatum obcaecati suscipit iusto officiis vitae incidunt, necessitatibus dolorem, eius inventore minus ipsum et. Incidunt impedit eius, porro, modi numquam odit, harum labore quam voluptatem repellendus recusandae. Voluptatem quis inventore culpa voluptatum nobis voluptatibus tenetur eum aperiam modi, accusantium pariatur saepe ratione magnam.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto impedit nisi explicabo omnis eius
+                in, placeat quidem adipisci ducimus, error delectus. Dolore corporis quod harum nostrum libero quam
+                ducimus placeat, qui, saepe unde consequatur molestiae omnis. Harum officiis commodi numquam, incidunt
+                fugit nisi culpa! Esse eligendi quae deleniti excepturi enim alias aspernatur vel praesentium magnam
+                vero animi voluptatum obcaecati suscipit iusto officiis vitae incidunt, necessitatibus dolorem, eius
+                inventore minus ipsum et. Incidunt impedit eius, porro, modi numquam odit, harum labore quam voluptatem
+                repellendus recusandae. Voluptatem quis inventore culpa voluptatum nobis voluptatibus tenetur eum
+                aperiam modi, accusantium pariatur saepe ratione magnam.</p>
         </div>
         <a href="https://www.w3schools.com/css/css_dimension.asp" target="_blank">CSS Height, Width and Max-width</a>
         <a href="https://www.w3schools.com/css/css_selectors.asp" target="_blank">CSS Selectors</a>
         <a href="https://www.w3schools.com/cssref/pr_margin-left.asp" target="_blank">CSS margin-left Property</a>
         <a href="https://www.w3schools.com/html/html_blocks.asp" target="_blank">HTML Block and Inline Elements</a>
+        <hr>
+        <h1>7. Link Button, target blank, text-decoration, linear-gradiant</h1>
+        <button type="submit" id="button_one">Submit Button</button>
+        <h1>9. Box shadow, border image, gradient angle, footer</h1>
+        <div id="box_shadow_hover">
+            <p>Box shadow. Lorem ipsum dolor, sit amet consectetur <br> adipisicing elit. Laboriosam, eveniet!</p>
+        </div>
+        <hr>
+        <h1 id="Pseudo_hover">12. Pseudoclass part. hover all elements. hover speacial.</h1>
+        <input type="email" name="email" id="input_focus_pseudoclass" value="Enter your email">
+        <button type="submit">Submit Button</button>
+        <ul>
+            <li>Html</li>
+            <li>Css</li>
+            <li>Javascript</li>
+            <li>Php</li>
+        </ul>
+        <a href="https://google.com" target="_blank" id="pseudoclass_anchor_link_tag">Google Search Page</a>
+        <hr>
+        <h1 id="helloElement">14. Pseudo element before after</h1>
+        <hr>
+        <h1 id="position_relative">15. Css position. static, relative, absolute, fixed</h1>
+        <hr>
+        <h1 id="important_priority">16. Css specificity style order style priority (color: green !important;)</h1>
+        <hr>
+        <h1>17. Css homework and learn by yourself</h1>
+        <a href="https://www.w3schools.com/css/css_overflow.asp" target="_blank">Css overflow</a><br>
+        <a href="https://www.w3schools.com/css/css3_mediaqueries.asp" target="_blank">media query</a><br>
+        <a href="https://www.w3schools.com/css/css3_animations.asp" target="_blank">css animation</a><br>
+        <a href="https://www.google.com/search?q=what+is+css3+w3schools&sxsrf=ALiCzsY97Os5PXG940uv0nvh6CtwdUM9sQ%3A1657609621112&ei=lR3NYoa1Bqfh4-EPjuebuAg&oq=what+is+css3+w3&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCAAQgAQyCAgAEB4QDxAWMgYIABAeEBYyBggAEB4QFjIGCAAQHhAWMgYIABAeEBY6BwgAEEcQsAM6BwgAELADEEM6CggAEOQCELADGAFKBAhBGABKBAhGGAFQhAFYug5ggB9oAXABeACAAZcCiAHfBZIBAzItM5gBAKABAcgBEcABAdoBBggBEAEYCQ&sclient=gws-wiz" target="_blank">what is css3</a><br>
+        <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">css3. css transiton</a><br>
+        <a href="https://moderncss.dev/guide-to-advanced-css-selectors-part-one/" target="_blank">advanced css selectors</a><br>
+        <hr>
+
+
+
+
 </body>
 
 </html>
